# narrowdb

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  ROADMAP.md  docs.md
.github/workflows/: ci.yml  docker.yml  publish-napi.yml
bench/: common.rs  compare.rs  duckdb.rs  hyperfine.sh  narrow.rs
bench/results/: hyperfine.json  hyperfine.md
crates/narrow-napi/: .gitignore  Cargo.toml  README.md  package.json
crates/narrow-napi/npm/darwin-arm64/: README.md  package.json
crates/narrow-napi/npm/darwin-x64/: README.md  package.json
crates/narrow-napi/npm/linux-arm64-gnu/: README.md  package.json
crates/narrow-napi/npm/linux-x64-gnu/: README.md  package.json
crates/narrow-napi/npm/win32-x64-msvc/: README.md  package.json
crates/narrow-napi/src/: lib.rs
crates/server/: Cargo.toml  Dockerfile  README.md
crates/server/src/: main.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  README.md  RELEASE.md  ROADMAP.md
examples/: embedded_logs.rs  high_throughput_ingest.rs  time_series_rollup.rs
scripts/: check-release.sh
src/: bench.rs  engine.rs  lib.rs  main.rs  sql.rs  storage.rs  types.rs
src/engine/: aggregate.rs  bitmap.rs  compile.rs  mod.rs  scan.rs
tools/bench/: duckdb.rs  hyperfine.sh  narrow.rs
tools/release/: check-release.sh
