[package]
name = "narrowdb"
version = "0.1.1"
edition = "2024"
description = "A lightweight columnar database engine for log and time-series data"
license = "MIT"
repository = "https://github.com/lassejlv/narrowdb"
keywords = ["database", "columnar", "analytics", "logs", "timeseries"]
categories = ["database-implementations"]

[[bin]]
name = "narrowdb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
memmap2 = "0.9"
once_cell = "1.21"
ordered-float = "4.6"
rayon = "1.10"
rustc-hash = "2.1"
sqlparser = "0.53"
