[package]
name = "narrowdb"
version = "0.3.1"
edition = "2024"
description = "A lightweight columnar database engine for log and time-series data"
license = "MIT"
repository = "https://github.com/lassejlv/narrowdb"
keywords = ["database", "columnar", "analytics", "logs", "timeseries"]
categories = ["database-implementations"]

[[bin]]
name = "narrowdb"
path = "src/main.rs"

[[bin]]
name = "bench-narrow"
path = "tools/bench/narrow.rs"

[[bin]]
name = "bench-duckdb"
path = "tools/bench/duckdb.rs"
required-features = ["bench-duckdb"]

[[bin]]
name = "bench-compare"
path = "tools/bench/compare.rs"
required-features = ["bench-duckdb"]

[features]
bench-duckdb = ["dep:duckdb"]

[workspace]
members = ["crates/server", "crates/narrow-napi"]
resolver = "2"

[dependencies]
anyhow = "1.0"
lz4_flex = "0.11"
memmap2 = "0.9"
once_cell = "1.21"
ordered-float = "4.6"
rayon = "1.10"
rustc-hash = "2.1"
smallvec = "1.15"
sqlparser = "0.53"
duckdb = { version = "1", optional = true, features = ["bundled"] }
