[package]
name = "narrowdb-server"
version = "0.1.1"
edition = "2024"
description = "TCP server for the narrowdb embedded engine"
license = "MIT"
repository = "https://github.com/lassejlv/narrowdb"

[dependencies]
anyhow = "1.0"
narrowdb = { path = "../..", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
