[package]
name = "narrowdb-server"
version = "0.1.2"
edition = "2024"
description = "TCP server for the narrowdb embedded engine"
license = "MIT"
repository = "https://github.com/lassejlv/narrowdb"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
narrowdb = { path = "../..", version = "0.3.0" }
pgwire = { version = "0.38.3", default-features = false, features = ["server-api"] }
sqlparser = "0.53"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "sync"] }

[dev-dependencies]
tokio-postgres = "0.7"
